--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-package="com.mustly.wellmedia">
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.mustly.wellmedia">
 
 <application
     android:name=".MediaApplication"
@@ -16,7 +17,7 @@ package="com.mustly.wellmedia">
     <activity
         android:name=".MainActivity"
         android:exported="true"
-        android:theme="@style/Theme.Media.NoActionBar">
+        android:theme="@style/Theme.WellMedia.NoActionBar">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
