--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,11 @@ plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.5.30' apply false
+}
+
+ext {
+    kotlinVersion = "1.5.30"
 }
 
 task clean(type: Delete) {
