--- a/commonlib/src/main/AndroidManifest.xml
+++ b/commonlib/src/main/AndroidManifest.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.mustly.wellmedia.lib.commonlib">
+
+    <application>
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+
+            <meta-data
+                android:name="com.mustly.wellmedia.lib.commonlib.route.RouteInitializer"
+                android:value="androidx.startup" />
+
+        </provider>
+    </application>
 
 </manifest>
