--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,27 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.1.2' apply false
-    id 'com.android.library' version '7.1.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
-    id 'org.jetbrains.kotlin.jvm' version '1.5.30' apply false
+buildscript {
+    ext {
+        kotlinVersion = "1.6.10"
+        gradlePluginVersion = '7.2.0'
+    }
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath gradleApi()
+        classpath "com.android.tools.build:gradle:$gradlePluginVersion"
+        classpath "com.android.tools.build:gradle-api:$gradlePluginVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+    }
 }
 
-ext {
-    kotlinVersion = "1.5.30"
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
 
 task clean(type: Delete) {
