--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext {
-        kotlinVersion = "1.6.10"
-        gradlePluginVersion = '7.2.0'
-    }
-
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
-        classpath gradleApi()
-        classpath "com.android.tools.build:gradle:$gradlePluginVersion"
-        classpath "com.android.tools.build:gradle-api:$gradlePluginVersion"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "com.android.tools.build:gradle:7.2.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
     }
 }
 
