--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -12,8 +12,8 @@ java {
 dependencies {
     implementation project(":annotation")
 
-    implementation "org.jetbrains.kotlin:kotlin-reflect:${rootProject.ext.kotlinVersion}"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:${rootProject.ext.kotlinVersion}"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.30"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.30"
 
     kapt "com.google.auto.service:auto-service:1.0.1"
     implementation "com.google.auto.service:auto-service-annotations:1.0.1"
