feat: 编译错误处理

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -10,6 +10,8 @@ buildscript {
     }
 }
 
+apply plugin: "kotlin"
+
 repositories {
     google()
     mavenCentral()
@@ -17,8 +19,19 @@ repositories {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
+
+sourceSets {
+    main {
+        java {
+            srcDir "src/main/kotlin"
+        }
+        resources {
+            srcDir "src/main/resources"
+        }
+    }
 }
 
 dependencies {
