--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -45,8 +45,8 @@ dependencies {
     implementation "com.android.tools.build:gradle:7.2.0"
     implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.30"
-    //implementation "com.android.tools.build:gradle-api:7.2.0"
-    implementation "javax.inject:javax.inject:1"
+    // implementation "com.android.tools.build:gradle-api:7.2.0"
+    // implementation "javax.inject:javax.inject:1"
     implementation 'dom4j:dom4j:1.6.1'
     implementation 'com.android.tools:repository:30.2.1'
     implementation 'com.android.tools:common:30.2.1'
