--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        google()
-        mavenCentral()
+        maven{ url 'https://maven.aliyun.com/repository/central'}
+        maven{ url'https://maven.aliyun.com/repository/public'}
+        maven{ url "https://maven.aliyun.com/repository/google"}
     }
 
     dependencies {
@@ -13,8 +14,9 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        mavenCentral()
+        maven{ url 'https://maven.aliyun.com/repository/central'}
+        maven{ url'https://maven.aliyun.com/repository/public'}
+        maven{ url "https://maven.aliyun.com/repository/google"}
     }
 }
 
