--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
     repositories {
-        google()
-        mavenCentral()
+        maven{ url 'https://maven.aliyun.com/repository/central'}
+        maven{ url'https://maven.aliyun.com/repository/public'}
+        maven{ url "https://maven.aliyun.com/repository/google"}
     }
 
     dependencies {
@@ -17,8 +18,9 @@ tasks.withType(Copy).all {
 }
 
 repositories {
-    google()
-    mavenCentral()
+    maven{ url 'https://maven.aliyun.com/repository/central'}
+    maven{ url'https://maven.aliyun.com/repository/public'}
+    maven{ url "https://maven.aliyun.com/repository/google"}
     maven { url "https://repo.gradle.org/gradle/libs-releases-local/"}
 }
 
