--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation project(':medialib')
     implementation project(":annotation")
 
-    def camerax_version = "1.2.0-beta01"
+    def camerax_version = "1.1.0"
 
     // Kotlin
     implementation "androidx.core:core-ktx:1.7.0"
