--- a/commonlib/build.gradle
+++ b/commonlib/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation "androidx.startup:startup-runtime:1.1.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
 }
