--- a/commonlib/src/main/AndroidManifest.xml
+++ b/commonlib/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mustly.wellmedia.lib.commonlib">
 
+    <uses-permission android:name="android.permission.CAMERA" />
     <application>
         <provider
             android:name="androidx.startup.InitializationProvider"
