--- a/commonlib/build.gradle
+++ b/commonlib/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0'
     implementation "androidx.startup:startup-runtime:1.1.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation 'androidx.exifinterface:exifinterface:1.3.2'
 }
