--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation project(':commonlib')
     implementation project(':medialib')
     implementation project(":annotation")
+    implementation project(":nativelib")
 
     def camerax_version = "1.1.0"
 
