feat: 使用 native lame so 的能力实现录音编码为 mp3 的功能。自己控制mp3文件的追加写入和覆盖写入。

--- a/nativelib/build.gradle
+++ b/nativelib/build.gradle
@@ -43,6 +43,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    // AGP4.0后，有了 cmakelist 配置，就不需要这个了。否则会出现 merge so 错误。
+    /*sourceSets {
+        main {
+            jniLibs.srcDirs = ["libs"]
+        }
+    }*/
 }
 
 dependencies {
