--- a/nativelib/src/main/cpp/CMakeLists.txt
+++ b/nativelib/src/main/cpp/CMakeLists.txt
@@ -15,7 +15,7 @@ project("nativelib")
 # Gradle automatically packages shared libraries with your APK.
 
 add_library( # Sets the name of the library.
-             nativelib
+             mp3lame
 
              # Sets the library as a shared library.
              SHARED
@@ -63,7 +63,7 @@ find_library( # Sets the name of the path variable.
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-                       nativelib
+                       mp3lame
 
                        # Links the target library to the log library
                        # included in the NDK.
